// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createDisposalsFromOffence ignores disposal 2063 when there was a disposal 2063 with result code 2060 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2063",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns a PNC disposal using the sentence date from the matching offence when adjournment does not exist and disposal 3027 does not exist 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2050",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "",
    "disposalQuantity": "    05122024          00",
    "disposalText": null,
    "disposalType": "3027",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns a PNC disposal using the sentence date from the matching offence when adjournment exists 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2050",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns a PNC disposal using the sentence date from the matching offence when disposal 3027 exists 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": null,
    "disposalType": "3027",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns all PNC disposals for results when 2060 and 2050 results and more than 2 disposals generated 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2050",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y                     00",
    "disposalText": "",
    "disposalType": "2050",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y1  220520240000025.0000",
    "disposalText": "",
    "disposalType": "2060",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns all PNC disposals for results when 2060 and 2063 results and more than 2 disposals generated 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y1  220520240000025.0000",
    "disposalText": "",
    "disposalType": "2060",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2063",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y                     00",
    "disposalText": "",
    "disposalType": "2063",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns disposals when all PNC disposals are 2007 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y   220520240000025.0000",
    "disposalText": "",
    "disposalType": "2007",
    "type": "DISPOSAL",
  },
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y1  220520240000025.0000",
    "disposalText": "",
    "disposalType": "2007",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns only PNC disposals for a 2060 result when a disposal 2050 has been found and only 2 disposals generated 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y1  220520240000025.0000",
    "disposalText": "",
    "disposalType": "2060",
    "type": "DISPOSAL",
  },
]
`;

exports[`createDisposalsFromOffence returns only PNC disposals for a 2060 result when a disposal 2063 has been found and only 2 disposals generated 1`] = `
[
  {
    "disposalQualifiers": "A ",
    "disposalQuantity": "Y1  220520240000025.0000",
    "disposalText": "",
    "disposalType": "2060",
    "type": "DISPOSAL",
  },
]
`;
